<resources>
    <string name="app_name">RooMBTI</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="roombtiLogo_text">RooMBTI</string>
    <string name="slogan_text">Find a roommate for your MBTI type.</string>
    <string name="welcome_login_text">Welcome to RooMBTI,\nwhere you can find the perfect\nroommate or place for you.</string>
    <string name="hello_text">Hello!</string>
    <string name="next_text">Next</string>
    <string name="welcome_mbti_text">Welcome!</string>
    <string name="select_mbti_text_plain">Please select your MBTI type 😊</string>
    <string name="mbti_test_link_text">If you don\'t know your personality type,\nyou can click here to take the test\nand find out your type.</string>
    <string name="upload_text">Upload</string>
    <string name="register_name_ghost">Name</string>
    <string name="register_surname_ghost">Surname</string>
    <string name="register_gender_ghost">Gender</string>
    <string name="register_age_ghost">Age</string>
    <string name="register_email_ghost">Email</string>
    <string name="register_password_ghost">Password</string>
    <string name="mbti_dropdown_select_text">Select</string>
    <string name="are_you_text">Are you looking\nfor roommates\nor a home?</string>
    <string name="select_option_text">Please select the option\nwhich suits you.</string>
    <string name="roommate_select_text">I am looking for roommates.</string>
    <string name="home_select_text">I am looking for a home.</string>
    <string name="number_of_housemate_text">Number of housemates:</string>
    <string name="location_text">Location:</string>
    <string name="budget_text">Budget:</string>
    <string name="smoke_allowence_text">Do you allow smoking?:</string>
    <string name="pet_allowence_text">Do you allow pets?:</string>
    <string name="houserenter_upload_descr_text">Upload at least 5\nphotos of your house.</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="person_text">/person</string>
    <string name="rent_text">rent</string>
    <string name="now_text">now</string>
    <string name="max_text">max</string>
    <string name="city_mun_text">city, municipality</string>
    <string name="roombti">RooMBTI</string>
    <string name="main_roommates_filter_text">Filter</string>
    <string name="main_roommates_sort_text">Sort</string>
    <string name="min_text">min</string>
    <string name="seeker_smoke_text">Do you smoke:</string>
    <string name="seeker_pet_text">Do you have a pet:</string>
    <string name="university_text">University:</string>
    <string name="optional_text">optional</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_login">Please login to continue.</string>
    <string name="person_inspect_name">Doğu Baha ARIKAN</string>
    <string name="person_inspect_age">22 years old</string>
    <string name="person_inspect_phone_no">+90 (555) 420 00–00</string>
    <string name="message">Message</string>
    <string name="person_inspect_mbti">ENFJ</string>
    <string name="person_inspect_uni">Yeditepe University</string>
    <string name="person_inspect_location">Istanbul, Ataşehir</string>
    <string name="person_inspect_pet">Has no pet</string>
    <string name="person_inspect_smoke">Not Smokes</string>
    <string name="person_inspect_male">Male</string>
    <string name="ist_atasehir">Istanbul, Atasehir</string>
    <string name="rm3_4">3/4</string>
    <string name="tl_icon_text">₺</string>
    <string name="person">3,850/person</string>
    <string name="infp">INFP</string>
    <string name="enfj">ENFJ</string>
    <string name="intp">INTP</string>
    <string name="pet_allowed_text">Pet Allowed</string>
    <string name="smoking_allowed_text">Smoking Allowed</string>
    <string name="male_preference_text">Male Preference</string>
    <string name="ersin_kara">Ersin KARA</string>
    <string name="room_inspect_phone_num">+90 (555) 420 13-12</string>
    <string name="text_here">Text here...</string>
    <string name="slide_edit_profile">Edit Profile</string>
    <string name="slide_message">Message</string>
    <string name="slide_settings">Settings</string>
    <string name="slide_log_out">Log out</string>
    <string name="slide_slogan">Find a roommate for your type.</string>
    <string name="app_version">App version: 1.0</string>
    <string name="title_activity_chats">ChatsActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_mbti">Change MBTI</string>
    <string name="change_university">Change University</string>
    <string name="change_max_budget">Change Max. Budget</string>
    <string name="change_min_budget">Change Min. Budget</string>
    <string name="change_smoking_opt">Change Smoking Option</string>
    <string name="change_pet_opt">Change Pet Option</string>
    <string name="change_max_housemates">Change Max. Housemates</string>
    <string name="change_min_housemates">Change Min. Housemates</string>
</resources>