<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HouseRenterActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/houserenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/gradient"
            android:layout_width="wrap_content"
            android:layout_height="610dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/gradient"
            />

        <TextView
            android:id="@+id/roombtiLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/roombtiLogo_text"
            android:textAppearance="@style/roombtiLogo_text_theme"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="109dp"
            android:text="@string/slogan_text"
            android:textAppearance="@style/slogan_text_theme"
            android:gravity="center"
            />

        <View
            android:id="@+id/houserenter_rect"
            android:layout_width="376dp"
            android:layout_height="553dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="173dp"
            android:background="@drawable/houserenter_rect"
            />

        <View
            android:id="@+id/houserenter_upload_image_img"
            android:layout_width="136dp"
            android:layout_height="109dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="191dp"
            android:background="@drawable/houserenter_upload_image"
            />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="82dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="220dp"
            android:background="@drawable/houserenter_upload_image_plus_sign">
        </ImageView>

        <TextView
            android:id="@+id/upload_at_l"
            android:layout_width="162dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="194dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="204dp"
            android:text="@string/houserenter_upload_descr_text"
            android:textAppearance="@style/houserenter_upload_descr_text_theme"
            android:gravity="center_horizontal|center_vertical"
            />

        <Button
            android:id="@+id/houserenter_upload_button"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="230dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="258dp"
            android:text="@string/upload_text"
            android:textAppearance="@style/upload_text_theme"
            android:background="@drawable/upload_button"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/houserenter_number_of_housemates"
            android:layout_width="195dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="336dp"
            android:text="@string/number_of_housemate_text"
            android:textAppearance="@style/register_text_theme"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/houserenter_housemate_now_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/now_text"
            android:textColorHint="@color/ghost_gray"
            android:textAppearance="@style/register_text_theme"
            android:inputType="numberDecimal"
            android:singleLine="true"

            android:layout_alignParentStart="true"
            android:layout_marginStart="248dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="318dp"

            android:background="@drawable/housrenter_housemate_now"

            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="11dp"
            />

        <EditText
            android:id="@+id/houserenter_housemate_max_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/max_text"
            android:textColorHint="@color/ghost_gray"
            android:textAppearance="@style/register_text_theme"
            android:inputType="numberDecimal"
            android:singleLine="true"

            android:layout_alignParentStart="true"
            android:layout_marginStart="317dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="318dp"

            android:background="@drawable/housrenter_housemate_now"

            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="11dp"
            />

        <TextView
            android:id="@+id/houserenter_location"
            android:layout_width="73dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:text="@string/location_text"
            android:textAppearance="@style/register_text_theme"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/houserenter_location_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/city_mun_text"
            android:textColorHint="@color/ghost_gray"
            android:textAppearance="@style/register_text_theme"
            android:inputType="text"
            android:singleLine="true"

            android:layout_alignParentStart="true"
            android:layout_marginStart="126dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="392dp"

            android:background="@drawable/houserenter_location"

            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="18dp"
            />

        <TextView
            android:id="@+id/houserenter_budget"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="484dp"
            android:text="@string/budget_text"
            android:textAppearance="@style/register_text_theme"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/houserenter_budget_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/rent_text"
            android:textColorHint="@color/ghost_gray"
            android:textAppearance="@style/register_text_theme"
            android:inputType="numberDecimal"
            android:singleLine="true"

            android:layout_alignParentStart="true"
            android:layout_marginStart="118dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="466dp"

            android:background="@drawable/housrenter_rent_budget"

            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="18dp"
            />

        <TextView
            android:id="@+id/per_person"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="210dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="484dp"
            android:text="@string/person_text"
            android:textAppearance="@style/yes_text_theme"
            android:gravity="center_horizontal|center_vertical"
            />


        <TextView
            android:id="@+id/houserenter_smoke_allowence"
            android:layout_width="191dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="558dp"
            android:text="@string/smoke_allowence_text"
            android:textAppearance="@style/register_text_theme"
            android:gravity="center_vertical"
            />


        <TextView
            android:id="@+id/houserenter_pet_allowence"
            android:layout_width="154dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="631dp"
            android:text="@string/pet_allowence_text"
            android:textAppearance="@style/register_text_theme"
            android:gravity="center_vertical"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/houserenter_smoke_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_text"

                android:layout_marginTop="553dp"
                android:layout_marginStart="243dp"

                android:buttonTint="#0C33FF"
                android:textAppearance="@style/yes_text_theme"
                android:checked="false" />

            <RadioButton
                android:id="@+id/houserenter_smoke_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_text"

                android:layout_marginTop="553dp"

                android:buttonTint="#0C33FF"
                android:textAppearance="@style/yes_text_theme"
                android:checked="false" />


        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/houserenter_pet_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="207dp"

                android:layout_marginTop="626dp"
                android:buttonTint="#0C33FF"

                android:checked="false"
                android:text="@string/yes_text"
                android:textAppearance="@style/yes_text_theme" />

            <RadioButton
                android:id="@+id/houserenter_pet_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="626dp"

                android:buttonTint="#0C33FF"

                android:checked="false"
                android:text="@string/no_text"
                android:textAppearance="@style/yes_text_theme" />

        </RadioGroup>

        <Button
            android:id="@+id/houserenter_next_button"
            android:layout_width="154dp"
            android:layout_height="39dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="672dp"
            android:background="@drawable/mbti_next_button"
            android:gravity="center"
            android:onClick="house_renter_next"
            android:text="@string/next_text"
            android:textAppearance="@style/next_text_theme" />


    </RelativeLayout>
</ScrollView>