<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPageActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loginpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <View
            android:id="@+id/gradient"
            android:layout_width="644dp"
            android:layout_height="610dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/gradient"
            android:gravity="center" />
        <View
            android:id="@+id/rectangle_login"
            android:layout_width="376dp"
            android:layout_height="505dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="173dp"
            android:background="@drawable/common_rect"
            />

        <TextView
            android:id="@+id/roombtiLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/roombtiLogo_text"
            android:textAppearance="@style/roombtiLogo_text_theme"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="109dp"
            android:text="@string/slogan_text"
            android:textAppearance="@style/slogan_text_theme"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="83dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="240dp"
            android:text="@string/welcome_back"
            android:textAppearance="@style/hello_text_theme"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/please_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="82dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="295dp"
            android:text="@string/please_login"
            android:textAppearance="@style/select_option_text"
            android:gravity="center_horizontal|center_vertical"
            />
        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="395dp"
            android:background="@drawable/seeker_renter_big_edit"

            android:hint="@string/register_email_ghost"
            android:textColorHint="@color/app_blue"
            android:textAppearance="@style/register_text_theme"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="11dp"
            />
        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="469dp"
            android:background="@drawable/seeker_renter_big_edit"

            android:hint="@string/register_password_ghost"
            android:textColorHint="@color/app_blue"
            android:textAppearance="@style/register_text_theme"
            android:inputType="textPassword"
            android:singleLine="true"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:padding="11dp"
            />

        <Button
            android:id="@+id/login_button_blue"
            android:layout_width="154dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="128dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="603dp"
            android:text="@string/login_text"
            android:textAppearance="@style/next_text_theme"
            android:gravity="center"
            android:background="@drawable/mbti_next_button"

            />
    </RelativeLayout>
</ScrollView>